trocado de bolo de cenoura para chocolate

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </tr>
       <tr>
         <td>Pizza</td>
-        <td>Bolo de cenoura</td>
+        <td>Bolo de chocolate</td>
       </tr>
     </table>
   </body>
