--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </tr>
       <tr>
         <td>Pastel</td>
-        <td>Pudim</td>
+        <td>Doce de leite</td>
       </tr>
       <tr>
         <td>Pizza</td>
