--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
         <th>Doces</th>
       </tr>
       <tr>
-        <td>Pastel</td>
+        <td>Coxinha</td>
         <td>Brigadeiro</td>
       </tr>
       <tr>
         <td>Pastel</td>
-        <td>Pirulito</td>
+        <td>Doce de leite</td>
       </tr>
       <tr>
         <td>Pizza</td>
-        <td>TE AMO MEU AMOR</td>
+        <td>Bolo de chocolate</td>
       </tr>
     </table>
   </body>
